<package>
  <name>openhrp3</name>
  <version>3.1.5</version>
  <description>
   OpenHRP3 : Robot software platform

  </description>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <maintainer email="iisaito@kinugarage.com">Isao Isaac Saito</maintainer>
  <author>AIST</author>

  <license>EPL</license>

  <url type="website">https://openrtp.jp/svn/hrg/openhrp/3.1/trunk/</url>
  <url type="bugtracker">https://openrtp.jp/redmine/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>atlas</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>collada-dom</build_depend>
  <build_depend>doxygen</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>f2c</build_depend>
  <build_depend>libjpeg</build_depend>
  <build_depend>libpng12-dev</build_depend>
  <build_depend>openrtm_aist</build_depend>
  <build_depend>openrtm_aist_python</build_depend>
  <build_depend>subversion</build_depend>

  <run_depend>atlas</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>collada-dom</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>f2c</run_depend>
  <run_depend>libjpeg</run_depend>
  <run_depend>libpng12-dev</run_depend>
  <run_depend>openrtm_aist</run_depend>
  <run_depend>openrtm_aist_python</run_depend>
  <!-- <test_depend>openrtm_aist</test_depend> -->

  <export>

  </export>
</package>
